# ToySLAM

./: .clang-format  .gitmodules  CMakeLists.txt
.ci/: build.sh  build_clang_debug.sh  build_clang_release.sh  build_clang_tidy.sh  build_gcc_analyzer.sh  build_gcc_debug.sh  build_gcc_release.sh  debug.sh  format.sh  release.sh
.github/actions/formatter/: action.yml
.github/actions/tsfm/: action.yml
.github/workflows/: clang-debug.yaml  clang-release.yaml  debug.yaml  debug_build.yaml  debug_release.yaml  formatter.yaml  gcc-debug.yaml  gcc-release.yaml  release.yaml
cmake/: FindGlog.cmake
docker/: Dockerfile
examples/: CMakeLists.txt  main.cpp
scripts/: docker_build.sh  format.sh  local_build.sh
src/: CMakeLists.txt  configuration.h  constants.h  eigen_helper.h  io_data.h  toy_slam.cpp  toy_slam.h
src/ba/: bundle_adjustment.cpp  bundle_adjustment.h
src/camera_model/: camera_model.h  pinhole_camera.cpp  pinhole_camera.h
src/configuration/: constant.h
src/detail/: conversion.h  toy_slam.cpp  toy_slam.h
src/geo_primitive/: point.h  pose.cpp  pose.h  vector.h
src/image/: frame.cpp  frame.h  image.h
src/initializer/: pose_initializer.cpp  pose_initializer.h
src/matcher/: image_matcher.cpp  image_matcher.h
src/math/: pose.h  vector.h
src/tracker/: tracker.cpp  tracker.h
src/util/: cv_primitive.cpp  cv_primitive.h  load_data.cpp  load_data.h
tests/: CMakeLists.txt  main.cpp  test_bundle_adjustment.cpp  test_cv_primitive.cpp  test_image_matcher.cpp  test_load_data.cpp  test_pinhole_camera.cpp  test_pose.cpp  test_pose_initializer.cpp  test_tracker.cpp  test_vector.cpp
tests/dataset/: cam.yaml  pose01.yaml
tests/pose_initializer_dataset/: cam.yaml  pose.yaml  pose02.yaml  pose03.yaml
